WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243065
Fix miscellaneous compiler warnings, July 2022 edition
https://bugs.webkit.org/show_bug.cgi?id=243065
Summary
Fix miscellaneous compiler warnings, July 2022 edition
Michael Catanzaro
Reported
2022-07-21 11:57:07 PDT
Fix miscellaneous compiler warnings, July 2022 edition
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-07-21 11:57:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2625
EWS
Comment 2
2022-07-22 15:22:40 PDT
Committed
252745@main
(aff87f6cbcf5): <
https://commits.webkit.org/252745@main
> Reviewed commits have been landed. Closing PR #2625 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug