Fix miscellaneous compiler warnings, July 2022 edition https://bugs.webkit.org/show_bug.cgi?id=243065

Reviewed by Chris Dumez.

* Source/WebCore/accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::atspiRole):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::getAttributeForBindings const):

Canonical link: https://commits.webkit.org/252745@main